# Moose

./: .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  README.rst  docker-compose.yml  mix.exs  setup.cfg  techstack.md  techstack.yml
.github/workflows/: ci.yml
assets/js/: user_socket.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: cain.ex  cain_web.ex  chat.ex  chat_web.ex  moose.ex  moose_web.ex  orangutan.ex  orangutan_web.ex
lib/cain/: application.ex  channel.ex  channel_clients.ex  channel_meta.ex  client.ex  client_meta.ex  mailer.ex  message.ex  message_meta.ex  repo.ex
lib/cain_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/chat/: application.ex  channel.ex  channel_clients.ex  channel_meta.ex  client.ex  client_context.ex  client_meta.ex  mailer.ex  message.ex  message_meta.ex  repo.ex  room.ex  room_meta.ex  user.ex  user_context.ex  user_meta.ex
lib/chat_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/moose/: application.ex  mailer.ex  repo.ex
lib/moose_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/orangutan/: application.ex  channel.ex  channel_context.ex  channel_meta.ex  client.ex  client_context.ex  client_meta.ex  mailer.ex  message.ex  message_context.ex  message_meta.ex  repo.ex  room.ex  room_meta.ex  user.ex  user_context.ex  user_meta.ex
lib/orangutan_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
priv/repo/: seeds.exs
test/: test_helper.exs
tests/: conftest.py  test_mail_server.py  test_skeleton.py
web/: package-lock.json
(+178 files in other folders)
