[metadata]
name = wolks
description = A Fake SMTP Server in Python
author = Clivern
author_email = hello@clivern.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/clivern/wolks/
project_urls =
    Documentation = https://github.com/clivern/wolks/
    Source = https://github.com/clivern/wolks/
    Changelog = https://github.com/clivern/wolks/blob/main/CHANGELOG.rst
    Tracker = https://github.com/clivern/wolks/issues
    Download = https://pypi.org/project/wolks/#files

platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata; python_version<"3.8"

[options.packages.find]
where = src
exclude =
    tests
    cache
    examples

testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[pyscaffold]
version = 4.1.1
package = wolks
